--- a/b/bg/bgr/bgroom.com.html
+++ b/b/bg/bgr/bgroom.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bgroom.com privacy policy that was archived on 2009-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090606134725id_/http%3A//www.bgroom.com/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bgroom.com privacy policy that was archived on 2009-09-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090926062646id_/http%3A//www.bgroom.com/privacy_policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -13,10 +13,9 @@
 	        <script src="resources/js.js" type="text/javascript"> </script>
         <script src="resources/marquee.js" type="text/javascript"></script>
 	<script type="text/javascript">
-        var myNumB=Math.floor(Math.random()*3); //number of big ads
+        var myNumB=Math.floor(Math.random()*2); //number of big ads
 var myNumA=Math.floor(Math.random()*3); //number of small ads
 var adsB = new Array (
-"resources/523x60_valentine_en.swf",
 "resources/B2_en.swf",
 "resources/refer10_en_523x60_04.07.swf"); //list of big ads
 //big banner list
@@ -136,7 +135,7 @@ function showBanner(type) {
 document.write('<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=5,0,0,0" width="240" height="58" id="promo1" align="middle"><param name="allowScriptAccess" value="sameDomain" /><param name="movie" value="' + myAdA + '" /><param name="quality" value="high" /><param name="wmode" value="transparent" /><param name="bgcolor" value="#ffffff" /><embed src="' +myAdA + '" quality="high" wmode="transparent" bgcolor="#ffffff" width="240" height="58" name="promo1" align="middle" allowScriptAccess="sameDomain" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" /></object>');
 }
 showBanner('A');
-</script><object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=5,0,0,0" width="240" height="58" id="promo1" align="middle"><param name="allowScriptAccess" value="sameDomain"><param name="movie" value="resources/240x60_tourney_en.swf"><param name="quality" value="high"><param name="wmode" value="transparent"><param name="bgcolor" value="#ffffff"><embed src="resources/240x60_tourney_en.swf" quality="high" wmode="transparent" bgcolor="#ffffff" width="240" height="58" name="promo1" align="middle" allowscriptaccess="sameDomain" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer"></object>
+</script><object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=5,0,0,0" width="240" height="58" id="promo1" align="middle"><param name="allowScriptAccess" value="sameDomain"><param name="movie" value="resources/C1a.swf"><param name="quality" value="high"><param name="wmode" value="transparent"><param name="bgcolor" value="#ffffff"><embed src="resources/C1a.swf" quality="high" wmode="transparent" bgcolor="#ffffff" width="240" height="58" name="promo1" align="middle" allowscriptaccess="sameDomain" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer"></object>
 
 <noscript>
 <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=5,0,0,0" width="240" height="58" id="promo1" align="middle"><param name="allowScriptAccess" value="sameDomain" /><param name="movie" value="resources/C1a.swf" /><param name="quality" value="high" /><param name="wmode" value="transparent" /><param name="bgcolor" value="#ffffff" /><embed src="resources/C1a.swf" quality="high" wmode="transparent" bgcolor="#ffffff" width="240" height="58" name="promo1" align="middle" allowScriptAccess="sameDomain" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" /></object>
@@ -174,7 +173,7 @@ document.write('<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" cod
 
 
  if (loc=="Help" || loc=="FAQ" || loc=="Support" || loc=="timers" || loc=="glossary" || loc=="client_features" || loc=="tips" || loc=="payment_options" || loc=="payment_card" || loc=="payment_neteller" || loc=="payment_paypal" || loc=="payment_moneybookers" || loc=="payment_cashu" || loc=="payment_webmoney" || loc=="payment_westernunion" || loc=="payment_wirecard") {document.write("<div id='submenu_wrapper'><div id='submenu'><a href='Help.html'>Game Help</a> | <a href='FAQ.html'>FAQ</a> | <a href='Support.html'>Support</a></div></div>")}
-</script><object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=5,0,0,0" width="523" height="29" id="menu" align="middle"><param name="allowScriptAccess" value="sameDomain"><param name="movie" value="resources/menu.swf?m_langID=1&amp;m_btnCmd=privacy_policy&amp;pageUrl=https://web.archive.org/web/20090606134725id_/http%3A//www.bgroom.com/privacy_policy.html"><param name="quality" value="high"><param name="wmode" value="transparent"><param name="bgcolor" value="#ffffff"><embed src="resources/menu.swf?m_langID=1&amp;m_btnCmd=privacy_policy&amp;pageUrl=https://web.archive.org/web/20090606134725id_/http%3A//www.bgroom.com/privacy_policy.html" quality="high" wmode="transparent" bgcolor="#ffffff" width="523" height="29" name="menu" align="middle" allowscriptaccess="sameDomain" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer"></object>
+</script><object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=5,0,0,0" width="523" height="29" id="menu" align="middle"><param name="allowScriptAccess" value="sameDomain"><param name="movie" value="resources/menu.swf?m_langID=1&amp;m_btnCmd=privacy_policy&amp;pageUrl=https://web.archive.org/web/20090926062646id_/http%3A//www.bgroom.com/privacy_policy.html"><param name="quality" value="high"><param name="wmode" value="transparent"><param name="bgcolor" value="#ffffff"><embed src="resources/menu.swf?m_langID=1&amp;m_btnCmd=privacy_policy&amp;pageUrl=https://web.archive.org/web/20090926062646id_/http%3A//www.bgroom.com/privacy_policy.html" quality="high" wmode="transparent" bgcolor="#ffffff" width="523" height="29" name="menu" align="middle" allowscriptaccess="sameDomain" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer"></object>
 	<br><br>
 		</div>
 	
@@ -267,11 +266,26 @@ document.write('<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" cod
 	<a href="about_us.html">About Us</a><br><br>
 
 
-<a href="http://www.skillonnet.com/" target="_blank"><img src="resources/SkillOnNet.gif" border="0"></a>&nbsp;&nbsp;&nbsp;&nbsp;<img src="resources/18+.gif" width="30" height="30" border="0">&nbsp;&nbsp;&nbsp;&nbsp;<a href="itech.html" onclick="javascript:window.open('itech.html','itech_win','width=340,height=400,statusbar=0,menubar=0');return false;"><img src="resources/bg_ico_itechlabs.gif" width="105" height="27" border="0"></a>&nbsp;&nbsp;&nbsp;&nbsp;<img src="resources/bg_ico_thewte.gif" width="90" height="29" border="0">&nbsp;&nbsp;&nbsp;&nbsp;<img src="resources/secure-site.gif" width="72" height="30" border="0"><br>
+<img src="resources/NVlic-logo.gif" border="0">
+&nbsp;&nbsp;&nbsp;&nbsp;
+
+<a href="http://www.skillonnet.com/" target="_blank"><img src="resources/SkillOnNet.gif" border="0"><!--
+a-->&nbsp;&nbsp;&nbsp;&nbsp;
+
+<img src="resources/18+.gif" width="30" height="30" border="0">
+&nbsp;&nbsp;&nbsp;&nbsp;
+
+</a><a href="itech.html" onclick="javascript:window.open('itech.html','itech_win','width=340,height=400,statusbar=0,menubar=0');return false;"><img src="resources/bg_ico_itechlabs.gif" width="105" height="27" border="0"></a>
+&nbsp;&nbsp;&nbsp;&nbsp;
+
+<img src="resources/bg_ico_thewte.gif" width="90" height="29" border="0">&nbsp;&nbsp;&nbsp;&nbsp;<img src="resources/secure-site.gif" width="72" height="30" border="0">
+
+<br>
 <br>
 
-This site is owned and operated by BRIGHT OASIS LTD
-	
+<span style="font-size:11px;">This site is owned and operated by BRIGHT OASIS LTD - Skill processing LTD &amp; Skill On Net NV</span>
+<br>
+
 
 		
 		
