--- a/o/ou/our/ourlads.com.html
+++ b/o/ou/our/ourlads.com.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the ourlads.com privacy policy that was archived on 2009-04-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090420103601id_/http%3A//ourlads.com/privacy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ourlads.com privacy policy that was archived on 2009-09-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090926170502id_/http%3A//www.ourlads.com/privacy.cfm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
-<title>2009 NFL Draft - 2009 NFL Mock Draft from Ourlads Scouting Services</title><meta content="Welcome to Ourlads Scouting Services, the most respected source for NFL Draft information among NFL Fans, Media, and Scouts and the most up to date and complete NFL Team Depth Charts on the internet. Ourlads also provides the most talked about 2009 NFL Mock Draft on the internet." name="description">
-<meta content="2009 nfl draft, 2009 nfl mock draft, nfl draft, ourlad, our lads, nfl, nfl draft guide, football, nfl football, nfl expert pick, nfl scouting, nfl free agents, nfl quarterback rating, pro football, dan shonka, brian delucia, college football, college football bowl projection, college football bowl schedule" name="keywords">
-<meta content="Copyright © 2008, Ourlads' Scouting Services." name="copyright">
+<title>2010 NFL Draft - 2010 NFL Mock Draft from Ourlads Scouting Services</title><meta content="Welcome to Ourlads Scouting Services, the most respected source for NFL Draft information among NFL Fans, Media, and Scouts and the most up to date and complete NFL Team Depth Charts on the internet. Ourlads also provides the most talked about 2010 NFL Mock Draft on the internet." name="description">
+<meta content="2010 nfl draft, 2010 nfl mock draft, nfl draft, ourlad, our lads, nfl, nfl draft guide, football, nfl football, nfl expert pick, nfl scouting, nfl free agents, nfl quarterback rating, pro football, dan shonka, brian delucia, college football, college football bowl projection, college football bowl schedule" name="keywords">
+<meta content="Copyright © 2009, Ourlads' Scouting Services." name="copyright">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="stylesheet" type="text/css" href="styles/globalstyles.css">
 </head>
@@ -59,14 +59,6 @@
 	<div class="dkbluedivider"></div>
 	<div class="leftcolheader">NFL DRAFT INFO</div>
 	<div class="dkbluedivider"></div>
-	<!--
-	<div class="leftcoltext">&rsaquo; <a href="2006nflmockdraft.cfm">2006 NFL Mock Draft</a></div>
-	<div class="greydivider"></div>
-	<div class="whtdivider"></div>
-	-->
-	<div class="leftcoltext">› <a href="draftsequence.cfm">2008 Draft Sequence</a></div>
-	<div class="greydivider"></div>
-	<div class="whtdivider"></div>
 	<div class="leftcoltext">› <a href="nfldraftvalue.cfm">NFL Draft Value Chart</a></div>
 	<div class="greydivider"></div>
 	<div class="whtdivider"></div>
@@ -76,11 +68,11 @@
 	<div class="leftcoltext">› <a href="recentdraftsmain.cfm">Recent Drafts</a></div>
 	<div class="dkbluedivider"></div>
 	<div class="leftcolheader">SITE FEATURES</div>
-	<div class="whtdivider"></div>
-	<div class="leftcoltext">› <a href="https://secure.ourlads.com/SubscriptionLogin.cfm">Depth Charts/Rosters</a></div>
+    <div class="whtdivider"></div>
+	<div class="leftcoltext">› <a href="http://ourlads.blogspot.com">NFL Team/Draft Blog</a></div>
 	<div class="greydivider"></div>
 	<div class="whtdivider"></div>
-	<div class="leftcoltext">› <a href="columnsindex.cfm">Columns</a></div>
+	<div class="leftcoltext">› <a href="https://secure.ourlads.com/SubscriptionLogin.cfm">Depth Charts/Rosters</a></div>
 	<div class="greydivider"></div>
 	<div class="whtdivider"></div>
 	<div class="leftcoltext">› <a href="scouthalloffame.cfm">Scouts Hall Of Fame</a></div>
@@ -92,9 +84,10 @@
 	<div class="leftcoltext">› <a href="proscoutconfidential/index.htm" target="_blank">Pro Scout Confidential</a></div>
 	<div class="greydivider"></div>
 	<div class="whtdivider"></div>
-	<div id="leftordertitle"><img src="images/2009Subscriptions.gif" border="0"></div>
+	<div id="leftordertitle"><img src="images/2010Subscriptions.gif" border="0"></div>
 	<div id="leftordertext">Purchase Your <br>Complete Package Today!<a href="https://secure.ourlads.com/curorder.cfm"><img src="images/ordernow.gif" style="padding-top:6px;" border="0"></a></div>
 	<div class="greydivider"></div>
+	<div style="padding:0px;"><img src="images/sidebnramer.gif"></div>
 </div>
 				<div id="twocolright">
 					<div id="twocolrighttext">
@@ -173,7 +166,7 @@
 	<div id="lngdkline"></div>
 	<div id="footer">
 	<a href="index.cfm" class="L_arial10LtBlue">Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-	Copyright © 2008 Ourlads Scouting Services. All rights reserved.&nbsp;&nbsp;|&nbsp;&nbsp;
+	Copyright © 2009 Ourlads Scouting Services. All rights reserved.&nbsp;&nbsp;|&nbsp;&nbsp;
 	<a href="conditions.cfm" class="L_arial10LtBlue">Terms &amp; Conditions</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 	<a href="privacy.cfm" class="L_arial10LtBlue">Privacy Policy</a>
 	<br>
