--- a/t/tt/ttg/ttgasia.com.html
+++ b/t/tt/ttg/ttgasia.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ttgasia.com privacy policy that was archived on 2009-04-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090403165644id_/http%3A//www.ttgasia.com/index.php%3Foption%3Dcom_content%26task%3Dview%26id%3D14030%26Itemid%3D40%26issueid%3D456) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ttgasia.com privacy policy that was archived on 2009-09-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090927000515id_/http%3A//www.ttgasia.com/index.php%3Foption%3Dcom_content%26task%3Dview%26id%3D14030%26Itemid%3D40%26issueid%3D470) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>TTG ASIA - Privacy Policy</title>
 <meta name="title" content="Privacy Policy">
@@ -71,17 +71,17 @@ pageTracker._trackPageview();
     <tbody><tr>
       <td width="270"><div align="center"><br><a href="/"><img src="templates/ttgasia/images/ttg_logo.gif" width="127" height="92" border="0"></a></div></td>
       <td width="500" valign="middle" align="right">
-		<table cellspacing="0" cellpadding="0" align="center" style="border: 0px solid black;"><tbody><tr><td><a href="index.php?option=com_artbanners&amp;task=clk&amp;id=79" target="_self"><img src="http://www.ttgasia.com/images/banners/ATM.gif" style="border:0px solid green" vspace="0" alt="ATM" width="468" height="60"></a></td></tr></tbody></table>	  &nbsp;
+		<table cellspacing="0" cellpadding="0" align="center" style="border: 0px solid black;"><tbody><tr><td><a href="index.php?option=com_artbanners&amp;task=clk&amp;id=93" target="_self"><img src="http://www.ttgasia.com/images/banners/AbacusSep2009.gif" style="border:0px solid green" vspace="0" alt="Abacus Sep 2009" width="468" height="60"></a></td></tr></tbody></table>	  &nbsp;
 	  </td>
     </tr>
   </tbody></table>
   <table width="770" height="36" border="0" cellpadding="0" cellspacing="0">
     <tbody><tr>
-      <td width="110"><a href="index.php?option=com_content&amp;task=view&amp;id=5&amp;Itemid=40&amp;issueid=456" onmouseover="MM_swapImage('Image1','','templates/ttgasia/images/t1ovr.gif',1)" onmouseout="MM_swapImgRestore()"><img src="templates/ttgasia/images/t1.gif" name="Image1" width="110" height="35" border="0" id="Image1"></a></td>
-      <td width="78"><a href="index.php?option=com_wrapper&amp;Itemid=39&amp;issueid=456" onmouseover="MM_swapImage('Image2','','templates/ttgasia/images/t2ovr.gif',1)" onmouseout="MM_swapImgRestore()"><img src="templates/ttgasia/images/t2.gif" name="Image2" width="78" height="35" border="0" id="Image2"></a></td>
-      <td width="82"><a href="index.php?option=com_content&amp;task=view&amp;id=164&amp;Itemid=38&amp;issueid=456" onmouseover="MM_swapImage('Image3','','templates/ttgasia/images/t3ovr.gif',1)" onmouseout="MM_swapImgRestore()"><img src="http://www.ttgasia.com/templates/ttgasia/images/t3.gif" name="Image3" width="82" height="35" border="0" id="Image3"></a></td>
-      <td width="81"><a href="index.php?option=com_wrapper&amp;Itemid=90&amp;issueid=456" onmouseover="MM_swapImage('Image4','','templates/ttgasia/images/t4ovr.gif',1)" onmouseout="MM_swapImgRestore()"><img src="http://www.ttgasia.com/templates/ttgasia/images/t4.gif" name="Image4" width="81" height="35" border="0" id="Image4"></a></td>
-      <td width="87"><a href="index.php?option=com_content&amp;task=view&amp;id=365&amp;Itemid=47&amp;issueid=456" onmouseover="MM_swapImage('Image5','','templates/ttgasia/images/t5ovr.gif',1)" onmouseout="MM_swapImgRestore()"><img src="http://www.ttgasia.com/templates/ttgasia/images/t5.gif" name="Image5" width="87" height="35" border="0" id="Image5"></a></td>
+      <td width="110"><a href="index.php?option=com_content&amp;task=view&amp;id=5&amp;Itemid=40&amp;issueid=470" onmouseover="MM_swapImage('Image1','','templates/ttgasia/images/t1ovr.gif',1)" onmouseout="MM_swapImgRestore()"><img src="templates/ttgasia/images/t1.gif" name="Image1" width="110" height="35" border="0" id="Image1"></a></td>
+      <td width="78"><a href="index.php?option=com_wrapper&amp;Itemid=39&amp;issueid=470" onmouseover="MM_swapImage('Image2','','templates/ttgasia/images/t2ovr.gif',1)" onmouseout="MM_swapImgRestore()"><img src="templates/ttgasia/images/t2.gif" name="Image2" width="78" height="35" border="0" id="Image2"></a></td>
+      <td width="82"><a href="index.php?option=com_content&amp;task=view&amp;id=164&amp;Itemid=38&amp;issueid=470" onmouseover="MM_swapImage('Image3','','templates/ttgasia/images/t3ovr.gif',1)" onmouseout="MM_swapImgRestore()"><img src="http://www.ttgasia.com/templates/ttgasia/images/t3.gif" name="Image3" width="82" height="35" border="0" id="Image3"></a></td>
+      <td width="81"><a href="index.php?option=com_wrapper&amp;Itemid=90&amp;issueid=470" onmouseover="MM_swapImage('Image4','','templates/ttgasia/images/t4ovr.gif',1)" onmouseout="MM_swapImgRestore()"><img src="http://www.ttgasia.com/templates/ttgasia/images/t4.gif" name="Image4" width="81" height="35" border="0" id="Image4"></a></td>
+      <td width="87"><a href="index.php?option=com_content&amp;task=view&amp;id=365&amp;Itemid=47&amp;issueid=470" onmouseover="MM_swapImage('Image5','','templates/ttgasia/images/t5ovr.gif',1)" onmouseout="MM_swapImgRestore()"><img src="http://www.ttgasia.com/templates/ttgasia/images/t5.gif" name="Image5" width="87" height="35" border="0" id="Image5"></a></td>
 
 <form action="index.php" method="post"></form>
 <td width="220" align="right" valign="middle" background="templates/ttgasia/images/t6.gif">
@@ -112,12 +112,17 @@ pageTracker._trackPageview();
 				<td>
 				
 <table width="100%" border="0" cellpadding="0" cellspacing="0">
-<tbody><tr align="left"><td><a href="index.php?option=com_frontpage&amp;Itemid=1&amp;issueid=456" class="mainlevel">Home</a></td></tr>
-<tr align="left"><td><a href="index.php?option=com_content&amp;task=section&amp;id=2&amp;Itemid=26&amp;issueid=456" class="mainlevel">News</a></td></tr>
-<tr align="left"><td><a href="index.php?option=com_content&amp;task=section&amp;id=61&amp;Itemid=106&amp;issueid=456" class="mainlevel">Leaders</a></td></tr>
-<tr align="left"><td><a href="index.php?option=com_content&amp;task=section&amp;id=4&amp;Itemid=28&amp;issueid=456" class="mainlevel">Destination Reports</a></td></tr>
-<tr align="left"><td><a href="index.php?option=com_content&amp;task=section&amp;id=17&amp;Itemid=51&amp;issueid=456" class="mainlevel">Special Report</a></td></tr>
-<tr align="left"><td><a href="index.php?option=com_content&amp;task=archiveissues&amp;Itemid=36&amp;issueid=456" class="mainlevel">Back Issues</a></td></tr>
+<tbody><tr align="left"><td><a href="index.php?option=com_frontpage&amp;Itemid=1&amp;issueid=470" class="mainlevel">Home</a></td></tr>
+<tr align="left"><td><a href="index.php?option=com_content&amp;task=section&amp;id=2&amp;Itemid=26&amp;issueid=470" class="mainlevel">News</a></td></tr>
+<tr align="left"><td><a href="index.php?option=com_content&amp;task=section&amp;id=78&amp;Itemid=125&amp;issueid=470" class="mainlevel">OPINION</a></td></tr>
+<tr align="left"><td><a href="index.php?option=com_content&amp;task=section&amp;id=75&amp;Itemid=133&amp;issueid=470" class="mainlevel">WORKPLACE</a></td></tr>
+<tr align="left"><td><a href="index.php?option=com_content&amp;task=section&amp;id=83&amp;Itemid=126&amp;issueid=470" class="mainlevel">TIP SHEET</a></td></tr>
+<tr align="left"><td><a href="index.php?option=com_content&amp;task=section&amp;id=82&amp;Itemid=132&amp;issueid=470" class="mainlevel">INTELLIGENCE</a></td></tr>
+<tr align="left"><td><a href="index.php?option=com_content&amp;task=section&amp;id=79&amp;Itemid=128&amp;issueid=470" class="mainlevel">ANALYSIS</a></td></tr>
+<tr align="left"><td><a href="index.php?option=com_content&amp;task=section&amp;id=85&amp;Itemid=135&amp;issueid=470" class="mainlevel">MALAYSIA</a></td></tr>
+<tr align="left"><td><a href="index.php?option=com_content&amp;task=section&amp;id=92&amp;Itemid=141&amp;issueid=470" class="mainlevel">DUBAI</a></td></tr>
+<tr align="left"><td><a href="index.php?option=com_content&amp;task=section&amp;id=91&amp;Itemid=142&amp;issueid=470" class="mainlevel">JAPAN</a></td></tr>
+<tr align="left"><td><a href="index.php?option=com_content&amp;task=archiveissues&amp;Itemid=36&amp;issueid=470" class="mainlevel">Back Issues</a></td></tr>
 </tbody></table>				</td>
 			</tr>
 			</tbody></table>
@@ -126,7 +131,7 @@ pageTracker._trackPageview();
 				<td>
 				
 <table width="100%" border="0" cellpadding="0" cellspacing="0">
-<tbody><tr align="left"><td><a href="index.php?option=com_content&amp;task=view&amp;id=14690&amp;Itemid=108&amp;issueid=456" class="mainlevel">Editorial Calendar</a></td></tr>
+<tbody><tr align="left"><td><a href="index.php?option=com_content&amp;task=view&amp;id=14690&amp;Itemid=108&amp;issueid=470" class="mainlevel">Editorial Calendar</a></td></tr>
 </tbody></table>				</td>
 			</tr>
 			</tbody></table>
@@ -154,7 +159,7 @@ pageTracker._trackPageview();
 					<table cellpadding="0" cellspacing="0" class="moduletable">
 						<tbody><tr>
 				<td>
-								</td>
+				<table cellspacing="0" cellpadding="0" align="center" style="border: 0px solid black;"><tbody><tr><td><a href="index.php?option=com_artbanners&amp;task=clk&amp;id=92" target="_self"><img src="http://www.ttgasia.com/images/banners/newATF2009.gif" style="border:0px solid green" vspace="0" alt="ATF 2009" width="153" height="340"></a></td></tr></tbody></table>				</td>
 			</tr>
 			</tbody></table>
 						<table cellpadding="0" cellspacing="0" class="moduletable">
@@ -190,7 +195,7 @@ pageTracker._trackPageview();
 		
 	<input type="hidden" name="op2" value="login">
 	<input type="hidden" name="lang" value="english">
-	<input type="hidden" name="return" value="/index.php?option=com_content&amp;task=view&amp;id=14030&amp;Itemid=40&amp;issueid=456">
+	<input type="hidden" name="return" value="/index.php?option=com_content&amp;task=view&amp;id=14030&amp;Itemid=40&amp;issueid=470">
 	<input type="hidden" name="message" value="0">
 	</form>
 					</td>
@@ -233,9 +238,9 @@ pageTracker._trackPageview();
 <!-- 
 var prefix = '&#109;a' + 'i&#108;' + '&#116;o'; 
 var path = 'hr' + 'ef' + '='; 
-var addy76219 = 'c&#111;nt&#97;ct' + '&#64;' + 'ttg&#97;s&#105;&#97;' + '&#46;' + 'c&#111;m'; 
-document.write( '<a ' + path + '\'' + prefix + ':' + addy76219 + '\'>' ); 
-document.write( addy76219 ); 
+var addy37872 = 'c&#111;nt&#97;ct' + '&#64;' + 'ttg&#97;s&#105;&#97;' + '&#46;' + 'c&#111;m'; 
+document.write( '<a ' + path + '\'' + prefix + ':' + addy37872 + '\'>' ); 
+document.write( addy37872 ); 
 document.write( '<\/a>' ); 
 //--> 
 </script><a href="mailto:contact@ttgasia.com">contact@ttgasia.com</a> 
@@ -265,7 +270,7 @@ This email address is being protected from spam bots, you need Javascript enable
               			<table cellpadding="0" cellspacing="0" class="moduletable">
 						<tbody><tr>
 				<td>
-				<table cellspacing="0" cellpadding="0" align="center" style="border: 0px solid black;"><tbody><tr><td><a href="index.php?option=com_artbanners&amp;task=clk&amp;id=77" target="_self"><img src="http://www.ttgasia.com/images/banners/ITBBerlinDaily09.gif" style="border:0px solid green" vspace="0" alt="ITBBerlinDaily09" width="153" height="340"></a></td></tr></tbody></table>				</td>
+				<table cellspacing="0" cellpadding="0" align="center" style="border: 0px solid black;"><tbody><tr><td><a href="index.php?option=com_artbanners&amp;task=clk&amp;id=94" target="_self"><img src="http://www.ttgasia.com/images/banners/MarriottSep2009.jpg" style="border:0px solid green" vspace="0" alt="Marriott Int'l" width="153" height="340"></a></td></tr></tbody></table>				</td>
 			</tr>
 			</tbody></table>
 			            </td>
@@ -277,7 +282,7 @@ This email address is being protected from spam bots, you need Javascript enable
     <tbody><tr>
       <td width="770" height="35" background="templates/ttgasia/images/bttm.gif"> 
         <div align="right"> 
-          <p class="bod">Copyright TTG Asia Media Pte Ltd © 2009 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.php?option=com_content&amp;task=view&amp;id=14031&amp;Itemid=40&amp;issueid=456">Terms of Use</a> | <a href="index.php?option=com_content&amp;task=view&amp;id=14030&amp;Itemid=40&amp;issueid=456">Privacy Policy</a>&nbsp;&nbsp;</p>
+          <p class="bod">Copyright TTG Asia Media Pte Ltd © 2009 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.php?option=com_content&amp;task=view&amp;id=14031&amp;Itemid=40&amp;issueid=470">Terms of Use</a> | <a href="index.php?option=com_content&amp;task=view&amp;id=14030&amp;Itemid=40&amp;issueid=470">Privacy Policy</a>&nbsp;&nbsp;</p>
         </div></td>
     </tr>
   </tbody></table>
@@ -286,4 +291,4 @@ This email address is being protected from spam bots, you need Javascript enable
 
 
 
-<!-- 1238777800 --></body></html>
+<!-- 1254009915 --></body></html>
