--- a/c/ci/cit/cityrealty.com.html
+++ b/c/ci/cit/cityrealty.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cityrealty.com privacy policy that was archived on 2009-05-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090514023809id_/http%3A//www.cityrealty.com/how_cityrealty_works/privacy_policy.cr) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cityrealty.com privacy policy that was archived on 2009-09-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090927010124id_/http%3A//www.cityrealty.com/how_cityrealty_works/privacy_policy.cr) for the most accurate reproduction.-->
 
 <html><head>
   <title>Privacy Policy &gt; CityRealty</title>
@@ -80,6 +80,8 @@ urchinTracker();
             </ul>
         </li>
         <li id="buildings"><a href="/condos/coop-condo-directory/">BUILDINGS <img src="/images/arrowDown.gif"></a>
+        </li>
+        <li id="commercial"><a href="/commercial-office/">COMMERCIAL <img src="/images/arrowDown.gif"></a>
         </li>
         <li id="resources"><a href="/resources/index.cr">RESOURCES <img src="/images/arrowDown.gif"></a>
             <ul>
@@ -493,6 +495,15 @@ hire your own architect or engineer.
 </td></tr><tr>
 </tr></tbody></table>
 <br clear="all"><br>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-163678-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 <!-- END: FOOTER HERE -->
     
   
