--- a/p/pr/pri/printsmadeeasy.com.html
+++ b/p/pr/pri/printsmadeeasy.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the printsmadeeasy.com privacy policy that was archived on 2009-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616105842id_/http%3A//www.printsmadeeasy.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the printsmadeeasy.com privacy policy that was archived on 2009-09-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090927072001id_/http%3A//www.printsmadeeasy.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>PrintsMadeEasy: Privacy &amp; Security</title>
@@ -8,7 +8,7 @@
 <link rel="shortcut icon" type="image/ico" href="/favicon.ico">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 
-
+<script src="CompatibilityMode.js" type="text/javascript"></script>
 </head>
 
 <body style="background-image:url(images/template_back.png); margin:0px;">
@@ -19,7 +19,7 @@
 <tbody><tr>
 <td width="2" bgcolor="#99CCFF"><img src="./images/transparent.gif" width="2" height="2" alt=""></td>
 <td width="760" bgcolor="#FFFFFF" align="left">
-<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" width="760" height="95">
+<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="https://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" width="760" height="95">
 <param name="movie" value="./nav_bar.swf?securemode=&amp;navopen="> <param name="quality" value="best"> <param name="bgcolor" value="#FFFFFF">
 <embed src="./nav_bar.swf?securemode=&amp;navopen=" quality="best" bgcolor="#FFFFFF" width="760" height="95" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"></object>
 <!-- Body Start -->
@@ -97,7 +97,7 @@ This site may contain links to other Web sites, including business card collecto
 </tbody></table>
 <img src="./images/transparent.gif" width="2" height="3" alt=""><br>
 <font class="SmallBody">
-<a href="http://www.printsmadeeasy.com/terms.php" class="copyright">Terms</a> &nbsp; | &nbsp;
+<a href="http://printsmadeeasy.affiliatetraction.com/" class="copyright">Affiliate Program</a> &nbsp; | &nbsp; <a href="http://www.printsmadeeasy.com/terms.php" class="copyright">Terms</a> &nbsp; | &nbsp;
 <a href="http://www.printsmadeeasy.com/privacy.php" class="copyright">Privacy</a> &nbsp; | &nbsp;
 <a href="http://www.printsmadeeasy.com/about.php" class="copyright">About Us</a> &nbsp; | &nbsp;
 <a href="http://www.printsmadeeasy.com/pricing.php" class="copyright">Pricing</a> &nbsp; | &nbsp; <a href="http://www.printsmadeeasy.com/sitemap.html" class="copyright">Site Map</a> &nbsp; | &nbsp; <a href="http://www.printsmadeeasy.com/customer_service.php" class="copyright">Customer Service</a>
